--- a/search.html
+++ b/search.html
@@ -106,6 +106,9 @@
   <div class="pst-async-banner-revealer d-none">
   <aside id="bd-header-version-warning" class="d-none d-print-none" aria-label="Version warning"></aside>
 </div>
+<aside class="bd-header-announcement" aria-label="Announcement">
+  <div class="bd-header-announcement__content">The Neuroinformatics Unit is hosting its inaugural Open Software Week during the week of 11th-15th August 2025! <a href='https://neuroinformatics.dev/open-software-week/index.html'>Find out more</a>!</div>
+</aside>
 
   
     <header class="bd-header navbar navbar-expand-lg bd-navbar d-print-none">
