--- a/open-software-week/index.html
+++ b/open-software-week/index.html
@@ -640,7 +640,34 @@ You can apply for any number of satellite events, but note that the ones on Thur
 <details class="sd-sphinx-override sd-dropdown sd-card sd-mb-3" id="intro-to-python">
 <summary class="sd-summary-title sd-card-header sd-bg-primary sd-bg-text-primary">
 <span class="sd-summary-icon"><svg version="1.1" width="1.0em" height="1.0em" class="sd-octicon sd-octicon-code-square" viewBox="0 0 16 16" aria-hidden="true"><path d="M0 1.75C0 .784.784 0 1.75 0h12.5C15.216 0 16 .784 16 1.75v12.5A1.75 1.75 0 0 1 14.25 16H1.75A1.75 1.75 0 0 1 0 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V1.75a.25.25 0 0 0-.25-.25Zm7.47 3.97a.75.75 0 0 1 1.06 0l2 2a.75.75 0 0 1 0 1.06l-2 2a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734L10.69 8 9.22 6.53a.75.75 0 0 1 0-1.06ZM6.78 6.53 5.31 8l1.47 1.47a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215l-2-2a.75.75 0 0 1 0-1.06l2-2a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042Z"></path></svg></span><span class="sd-summary-text">Intro to Python</span><span class="sd-summary-state-marker sd-summary-chevron-right"><svg version="1.1" width="1.5em" height="1.5em" class="sd-octicon sd-octicon-chevron-right" viewBox="0 0 24 24" aria-hidden="true"><path d="M8.72 18.78a.75.75 0 0 1 0-1.06L14.44 12 8.72 6.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018l6.25 6.25a.75.75 0 0 1 0 1.06l-6.25 6.25a.75.75 0 0 1-1.06 0Z"></path></svg></span></summary><div class="sd-summary-content sd-card-body docutils">
-<p class="sd-card-text">A beginner-friendly workshop for those who are new to programming and want to learn the basics of Python before diving into the rest of the week.</p>
+<p class="sd-card-text">Python is one of the most popular programming languages worldwide and is used in all areas of science. As one of the
+most flexible languages it can be used to automate routine tasks, visualise data, process images and run statistical
+tests, along with many other applications.</p>
+<p class="sd-card-text">The morning session will introduce you to the basics of programming in Python and get you up and running
+on your own machine. No experience is necessary, all you need is a laptop you can install software on.</p>
+<p class="sd-card-text">The afternoon session will provide some further Python training, and particularly introduce good practices that
+will pay dividends as you dive deeper into programming.</p>
+<p class="rubric" id="contents">Contents</p>
+<p class="sd-card-text"><strong>Morning</strong></p>
+<ul class="simple">
+<li><p class="sd-card-text">Introduction to Python</p></li>
+<li><p class="sd-card-text">Variables</p></li>
+<li><p class="sd-card-text">Data types</p></li>
+<li><p class="sd-card-text">Loops</p></li>
+<li><p class="sd-card-text">Conditional statements</p></li>
+<li><p class="sd-card-text">List comprehension</p></li>
+<li><p class="sd-card-text">Loading and saving data</p></li>
+<li><p class="sd-card-text">Writing your first Python script</p></li>
+</ul>
+<p class="sd-card-text"><strong>Afternoon</strong></p>
+<ul class="simple">
+<li><p class="sd-card-text">Using third party libraries from pip and conda</p></li>
+<li><p class="sd-card-text">Functions</p></li>
+<li><p class="sd-card-text">Classes and objects</p></li>
+<li><p class="sd-card-text">Errors and exceptions</p></li>
+<li><p class="sd-card-text">Organising your Python project and importing functions</p></li>
+<li><p class="sd-card-text">Documenting your code</p></li>
+</ul>
 </div>
 </details><details class="sd-sphinx-override sd-dropdown sd-card sd-mb-3" id="careers-clinic">
 <summary class="sd-summary-title sd-card-header sd-bg-primary sd-bg-text-primary">
