--- a/blog.html
+++ b/blog.html
@@ -228,8 +228,8 @@
 
 
 <li class=" ">
-  <a class="nav-link dropdown-item nav-internal" href="open-software-week/index.html">
-    Open Software Week
+  <a class="nav-link dropdown-item nav-internal" href="open-software-summer-school/index.html">
+    Open Software Summer School
   </a>
 </li>
 
@@ -435,8 +435,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="open-software-week/index.html">
-    Open Software Week
+  <a class="nav-link nav-internal" href="open-software-summer-school/index.html">
+    Open Software Summer School
   </a>
 </li>
 
