--- a/search.html
+++ b/search.html
@@ -223,8 +223,8 @@
 
 
 <li class=" ">
-  <a class="nav-link dropdown-item nav-internal" href="open-software-week/index.html">
-    Open Software Week
+  <a class="nav-link dropdown-item nav-internal" href="open-software-summer-school/index.html">
+    Open Software Summer School
   </a>
 </li>
 
@@ -430,8 +430,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="open-software-week/index.html">
-    Open Software Week
+  <a class="nav-link nav-internal" href="open-software-summer-school/index.html">
+    Open Software Summer School
   </a>
 </li>
 
