--- a/resources/index.html
+++ b/resources/index.html
@@ -66,7 +66,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Neuroinformatics Unit Code of Conduct" href="code_of_conduct.html" />
-    <link rel="prev" title="GSoC NIU Contributor Application Guidelines" href="../get-involved/gsoc/guidelines.html" /> 
+    <link rel="prev" title="GSoC NIU Projects 2025: spikewrap" href="../get-involved/gsoc/2025/projects/spikewrap.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   <meta name="docsearch:version" content="" />   
@@ -640,12 +640,12 @@ HowTo’s</div>
                   
 <div class="prev-next-area">
     <a class="left-prev"
-       href="../get-involved/gsoc/guidelines.html"
+       href="../get-involved/gsoc/2025/projects/spikewrap.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">GSoC NIU Contributor Application Guidelines</p>
+        <p class="prev-next-title">GSoC NIU Projects 2025: <code class="docutils literal notranslate"><span class="pre">spikewrap</span></code></p>
       </div>
     </a>
     <a class="right-next"
