--- a/index.html
+++ b/index.html
@@ -216,13 +216,6 @@
 
 
 <li class=" ">
-  <a class="nav-link dropdown-item nav-internal" href="collaborations.html">
-    Collaborations
-  </a>
-</li>
-
-
-<li class=" ">
   <a class="nav-link dropdown-item nav-internal" href="open-software-summer-school/index.html">
     Open Software Summer School
   </a>
@@ -434,13 +427,6 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="collaborations.html">
-    Collaborations
-  </a>
-</li>
-
-
-<li class="nav-item ">
   <a class="nav-link nav-internal" href="open-software-summer-school/index.html">
     Open Software Summer School
   </a>
@@ -628,7 +614,7 @@ to advance research in the two research centres and make new algorithms and tool
 <div class="sd-card-title sd-font-weight-bold docutils">
 <span class="fas fa-handshake sd-text-primary"></span> Collaborations</div>
 </div>
-<a class="sd-stretched-link sd-hide-link-text reference internal" href="collaborations.html"><span class="doc">Collaborations</span></a></div>
+<a class="sd-stretched-link sd-hide-link-text reference internal" href="projects.html#projects-collaborations"><span class="std std-ref">Collaborative projects</span></a></div>
 </div>
 </div>
 </div>
