--- a/open-software-summer-school/index.html
+++ b/open-software-summer-school/index.html
@@ -66,7 +66,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="External sources of travel funding" href="funding.html" />
-    <link rel="prev" title="Collaborations" href="../collaborations.html" /> 
+    <link rel="prev" title="Neuroinformatics Unit Code of Conduct" href="../resources/code_of_conduct.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   <meta name="docsearch:version" content="" />   
@@ -212,13 +212,6 @@
 <li class=" ">
   <a class="nav-link dropdown-item nav-internal" href="../resources/index.html">
     Resources
-  </a>
-</li>
-
-
-<li class=" ">
-  <a class="nav-link dropdown-item nav-internal" href="../collaborations.html">
-    Collaborations
   </a>
 </li>
 
@@ -428,13 +421,6 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="../resources/index.html">
     Resources
-  </a>
-</li>
-
-
-<li class="nav-item ">
-  <a class="nav-link nav-internal" href="../collaborations.html">
-    Collaborations
   </a>
 </li>
 
@@ -758,12 +744,12 @@ A limited number of travel stipends will also be available, but we encourage app
                   
 <div class="prev-next-area">
     <a class="left-prev"
-       href="../collaborations.html"
+       href="../resources/code_of_conduct.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Collaborations</p>
+        <p class="prev-next-title">Neuroinformatics Unit Code of Conduct</p>
       </div>
     </a>
     <a class="right-next"
