--- a/resources/code_of_conduct.html
+++ b/resources/code_of_conduct.html
@@ -65,7 +65,7 @@
     <link rel="author" title="About these documents" href="../about.html" />
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Collaborations" href="../collaborations.html" />
+    <link rel="next" title="Open Software Summer School" href="../open-software-summer-school/index.html" />
     <link rel="prev" title="Resources" href="index.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -212,13 +212,6 @@
 <li class=" current active">
   <a class="nav-link dropdown-item nav-internal" href="index.html">
     Resources
-  </a>
-</li>
-
-
-<li class=" ">
-  <a class="nav-link dropdown-item nav-internal" href="../collaborations.html">
-    Collaborations
   </a>
 </li>
 
@@ -428,13 +421,6 @@
 <li class="nav-item current active">
   <a class="nav-link nav-internal" href="index.html">
     Resources
-  </a>
-</li>
-
-
-<li class="nav-item ">
-  <a class="nav-link nav-internal" href="../collaborations.html">
-    Collaborations
   </a>
 </li>
 
@@ -721,11 +707,11 @@
       </div>
     </a>
     <a class="right-next"
-       href="../collaborations.html"
+       href="../open-software-summer-school/index.html"
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">Collaborations</p>
+        <p class="prev-next-title">Open Software Summer School</p>
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
