--- a/open-software-summer-school/index.html
+++ b/open-software-summer-school/index.html
@@ -633,14 +633,14 @@ to analyse whole-brain microscopy datasets.</p>
 <a class="sd-stretched-link sd-hide-link-text reference internal" href="2026/brainglobe.html#track-brainglobe-2026"><span class="std std-ref">Track: BrainGlobe</span></a></div>
 </div>
 <div class="sd-col sd-d-flex-row docutils">
-<div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm docutils">
+<div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
 <img alt="" class="sd-card-img-top" src="../_images/ephys-card.png" />
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
 <span class="fas fa-bolt sd-text-info"></span> Extracellular Electrophysiology</div>
 <p class="sd-card-text">Using open source tools to process and analyse large extracellular electrophysiology data (e.g. from silicon probes)</p>
 </div>
-</div>
+<a class="sd-stretched-link sd-hide-link-text reference internal" href="2026/extracellular-electrophysiology.html#track-extracellular-ephys"><span class="std std-ref">Track: Extracellular Electrophysiology</span></a></div>
 </div>
 </div>
 </div>
