--- a/open-software-summer-school/funding.html
+++ b/open-software-summer-school/funding.html
@@ -53,12 +53,6 @@
                 gtag('js', new Date());
                 gtag('config', 'G-6260TGM7TY');
             </script>
-    <script>
-                window.dataLayer = window.dataLayer || [];
-                function gtag(){ dataLayer.push(arguments); }
-                gtag('js', new Date());
-                gtag('config', 'G-6260TGM7TY');
-            </script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'open-software-summer-school/funding';</script>
     <link rel="canonical" href="https://neuroinformatics.dev/open-software-summer-school/funding.html" />
     <link rel="icon" href="../_static/logo_light.png"/>
@@ -66,7 +60,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Open Software Week 2025" href="2025/index.html" />
-    <link rel="prev" title="Open Software Summer School" href="index.html" /> 
+    <link rel="prev" title="2026 OSSS application questions" href="2026/application_questions.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   <meta name="docsearch:version" content="" />   
@@ -612,12 +606,12 @@ sources of funding as early as possible. If local funding from your lab/institut
                   
 <div class="prev-next-area">
     <a class="left-prev"
-       href="index.html"
+       href="2026/application_questions.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Open Software Summer School</p>
+        <p class="prev-next-title">2026 OSSS application questions</p>
       </div>
     </a>
     <a class="right-next"
@@ -671,7 +665,7 @@ sources of funding as early as possible. If local funding from your lab/institut
     <div class="footer-items__start">
       
         <div class="footer-item"><p class="sphinx-version">
-    Created using <a href="https://sphinx-doc.org/">Sphinx</a> 8.1.3.
+    Created using <a href="https://sphinx-doc.org/">Sphinx</a> 8.2.3.
     <br/>
     </p>
     <p class="theme-version">
