--- a/publications.html
+++ b/publications.html
@@ -634,6 +634,24 @@
 <div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
+Trusted by design: set up your research software for community adoption</div>
+<p class="sd-card-text">Niko Sirmpilatze, FOSDEM, February 2026</p>
+</div>
+<a class="sd-stretched-link sd-hide-link-text reference external" href="https://fosdem.org/2026/schedule/event/VPJH8F-trusted-by-design/"><span>https://fosdem.org/2026/schedule/event/VPJH8F-trusted-by-design/</span></a></div>
+</div>
+<div class="sd-col sd-d-flex-row docutils">
+<div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
+<div class="sd-card-body docutils">
+<div class="sd-card-title sd-font-weight-bold docutils">
+movement: a Python toolbox for analysing motion tracking data</div>
+<p class="sd-card-text">Niko Sirmpilatze, FOSDEM, January 2026</p>
+</div>
+<a class="sd-stretched-link sd-hide-link-text reference external" href="https://fosdem.org/2026/schedule/event/9VLSXV-movement-tracks-python/"><span>https://fosdem.org/2026/schedule/event/9VLSXV-movement-tracks-python/</span></a></div>
+</div>
+<div class="sd-col sd-d-flex-row docutils">
+<div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
+<div class="sd-card-body docutils">
+<div class="sd-card-title sd-font-weight-bold docutils">
 Aligning spikes to histology with BrainGlobe</div>
 <p class="sd-card-text">Alessandro Felder, UCL Neuropixels course, October 2025</p>
 </div>
